--- a/css/header.css
+++ b/css/header.css
@@ -41,7 +41,7 @@ Dark-Grey Background:     rgba(70, 73, 77, 0.8)
 #menu-icon-wrapper {
   text-align: center;
   margin: auto;
-  padding: 20vh 0px;
+  padding: 100px 0px;
   display: inline-block;
 }
 
@@ -49,7 +49,6 @@ Dark-Grey Background:     rgba(70, 73, 77, 0.8)
   margin: 0 auto;
   width: 200px;
   height: 50px;
-  margin: 5% 5%;
   display: flex;
   align-items: center;
   justify-content: center;
