--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,15 @@ Dark Grey Background:     rgba(70, 73, 77, 0.8)
 /* GLOBAL ATTRIBUTES */
 
 html, body {
+  /* user-select code bellow not mine, Credit to StackOverflow user: Blowsie */
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Opera and Firefox */
+  /* Bellow is my own code... */
   margin: 0;
   padding: 0;
   width: 100%;
