--- a/css/footer.css
+++ b/css/footer.css
@@ -1,16 +1,63 @@
-/* Footer */
+/*
+Seth Tal
+*/
+
+
+  /* FOOTER PROPERTIES */
+/* ========================================================================== */
 
 #footer-container {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 15vh;
-  display: block;
+  height: 150px;
+  background: #FBFBFB;
+
+  padding: 2em;
+
+  display: flex;
+  justify-content: space-between;
 }
 
-footer ul {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  list-style: none;
+#copyright {
+  display: flex;
+  flex-direction: column;
+}
+
+#copyright span {
+  height: 50%;
+  margin: auto 2em auto 2em;
+
+  font-size: 1em;
+  font-family: "Noto Sans";
+  color: #484351;
+}
+
+#links {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+}
+
+#links a {
+  margin-right: 2em;
+
+  font-family: "Noto Sans";
+  font-size: 1.25em;
+  color: #484351;
+}
+
+
+  /* MEDIA QUERIES */
+/* ========================================================================== */
+
+@media only screen and (min-width: 1000px) {
+  #footer-container {
+    padding: 3em;
+  }
+
+  #links {
+    margin-right: 12em;
+  }
+
+  #copyright {
+    margin-left: 10em;
+  }
 }
