--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 Seth Tal
 */
 
-  /* GLOBAL ATTRIBUTES */
+  /* GLOBAL ATTRIBUTES ~ Normalizations*/
 /* ========================================================================== */
 * {
   margin: 0;
